# chemtensor

./: .clang-format  .gitattributes  .gitignore  .readthedocs.yml  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build_wheels.yml  cd.yml  ci.yml  main.yml
doc/: .gitignore  Doxyfile  conf.py  index.rst
doc/examples/: basic_dmrg_fermi_hubbard.nblink  bug_integration.nblink  op_chains_mpo.nblink  op_chains_ttno.nblink  operator_average.nblink  water_molecule.nblink
doc/python/: python_api.rst
doc/src/: c_algorithm.rst  c_common.rst  c_operator.rst  c_state.rst  c_tensor.rst  c_util.rst
examples/bug/: bug_integration.ipynb
examples/chemistry/: water_molecule.ipynb
examples/dmrg/: basic_dmrg_fermi_hubbard.c  basic_dmrg_fermi_hubbard.ipynb  basic_su2_dmrg_fermi_hubbard.c
examples/gradients/: operator_average.ipynb
examples/op_chains/: op_chains_mpo.ipynb  op_chains_ttno.ipynb
examples/python/: chemtensor_python.ipynb
include/: cblas_ct.h  lapack_ct.h  numeric.h
include/algorithm/: bond_ops.h  bug.h  chain_ops.h  dmrg.h  gradient.h  su2_bond_ops.h  su2_chain_ops.h  su2_dmrg.h  thc.h  tree_ops.h  truncation.h
include/operator/: hamiltonian.h  local_op.h  mpo.h  mpo_graph.h  op_chain.h  su2_hamiltonian.h  su2_mpo.h  ttno_graph.h
include/state/: mps.h  su2_mps.h  ttns.h
include/tensor/: block_sparse_tensor.h  clebsch_gordan.h  dense_tensor.h  qnumber.h  sparse_coordinate_tensor.h  su2_graph.h  su2_irreps.h  su2_tensor.h  su2_tree.h  su2_util.h
include/util/: abstract_graph.h  bipartite_graph.h  hdf5_util.h  integer_linear_algebra.h  krylov.h  pcg_basic.h  queue.h  rng.h  runge_kutta.h  spherical_harmonics.h  util.h  wigner.h
perf/: perf_dmrg.c  perf_dmrg_coeffs.hdf5  perf_dmrg_coeffs.py
pymodule/: pymodule.c
python/: pymodule.c
python/chemtensor/: __init__.py
src/: aligned_memory.h  config.h  lapack_ct.h  lapack_essentials.h  numeric.h
src/algorithm/: bond_ops.c  bond_ops.h  bug.c  bug.h  chain_ops.c  chain_ops.h  dmrg.c  dmrg.h  gradient.c  gradient.h  operation.c  operation.h  su2_bond_ops.c  su2_chain_ops.c  su2_dmrg.c  thc.c  thc.h  tree_ops.c  tree_ops.h  truncation.c
src/mps/: mps.c  mps.h
src/operator/: hamiltonian.c  hamiltonian.h  local_op.c  local_op.h  mpo.c  mpo.h  mpo_graph.c  mpo_graph.h  op_chain.c  op_chain.h  su2_hamiltonian.c  su2_mpo.c  ttno.c  ttno.h  ttno_graph.c  ttno_graph.h
src/state/: mps.c  mps.h  su2_mps.c  ttns.c  ttns.h
src/tensor/: block_sparse_tensor.c  block_sparse_tensor.h  clebsch_gordan.c  clebsch_gordan.h  clebsch_gordan_gen.py  dense_tensor.c  dense_tensor.h  qnumber.c  qnumber.h  sparse_coordinate_tensor.c  su2_graph.c  su2_graph.h  su2_irrep_lists.c  su2_irrep_lists.h  su2_irreps.c  su2_irreps.h  su2_recoupling.c  su2_recoupling.h  su2_recoupling_gen.py  su2_tensor.c  su2_tensor.h  su2_tree.c  su2_tree.h  su2_util.c  su2_util.h
src/util/: abstract_graph.c  abstract_graph.h  bipartite_graph.c  hash_table.c  hash_table.h  hdf5_util.c  integer_linear_algebra.c  integer_linear_algebra.h  krylov.c  krylov.h  lapack_apple.h  linked_list.c  linked_list.h  pcg_basic.c  pcg_basic.h  queue.c  queue.h  rng.c  rng.h  runge_kutta.c  runge_kutta.h  spherical_harmonics.c  storage.c  storage.h  timing.c  timing.h  util.c  util.h  wigner.c
test/: run_tests.c  test_bipartite_graph.c  test_block_sparse_tensor.c  test_block_sparse_tensor.py  test_bond_ops.c  test_bond_ops.py  test_dense_tensor.c  test_dense_tensor.h  test_dense_tensor.py  test_dmrg.c  test_dmrg.py  test_hash_table.c  test_krylov.c  test_krylov.py  test_mpo.c  test_mpo.py  test_mpo_graph.c  test_mpo_graph.py  test_mps.c  test_mps.py  test_operation.c  test_operation.py  test_queue.c  test_su2_tensor.c  test_su2_tensor.py  test_su2_tree.c  test_su2_tree.py  util.py
test/algorithm/: bond_ops.py  bug.py  chain_ops.py  dmrg.py  numerical_gradient.c  numerical_gradient.h  test_bond_ops.c  test_bond_ops.py  test_bug.c  test_bug.py  test_chain_ops.c  test_chain_ops.py  test_dmrg.c  test_dmrg.py  test_gradient.c  test_gradient.py  test_operation.c  test_operation.py  test_su2_bond_ops.c  test_su2_chain_ops.c  test_su2_dmrg.c  test_thc.c  test_thc.py  test_tree_ops.c  test_truncation.c  test_truncation.py  thc.py  truncation.py
test/data/: test_bipartite_graph_minimum_vertex_cover.hdf5  test_block_sparse_tensor_copy.hdf5  test_block_sparse_tensor_dot.hdf5  test_block_sparse_tensor_flatten_axes.hdf5  test_block_sparse_tensor_get_block.hdf5  test_block_sparse_tensor_multiply_pointwise_vector.hdf5  test_block_sparse_tensor_reshape.hdf5  test_block_sparse_tensor_slice.hdf5  test_block_sparse_tensor_svd.hdf5  test_block_sparse_tensor_transpose.hdf5  test_dense_tensor_block.hdf5  test_dense_tensor_cyclic_partial_trace.hdf5  test_dense_tensor_dot.hdf5  test_dense_tensor_dot_update.hdf5  test_dense_tensor_multiply_pointwise.hdf5  test_dense_tensor_qr.hdf5  test_dense_tensor_rq.hdf5  test_dense_tensor_svd.hdf5  test_dense_tensor_transpose.hdf5  test_dmrg_singlesite.hdf5  test_dmrg_twosite.hdf5  test_eigensystem_krylov_hermitian.hdf5  test_eigensystem_krylov_symmetric.hdf5  test_lanczos_iteration_d.hdf5  test_mpo_from_graph.hdf5  test_mpo_graph_from_opchains_basic.hdf5  test_mps_to_statevector.hdf5  test_mps_vdot.hdf5  test_operator_inner_product.hdf5  test_retained_bond_indices.hdf5  test_su2_fuse_split_tree_enumerate_charge_sectors.hdf5
test/mps/: test_mps.c  test_mps.py
test/operator/: hamiltonian.py  mpo.py  opchain.py  opgraph.py  test_hamiltonian.c  test_hamiltonian.py  test_mpo.c  test_mpo.py  test_mpo_graph.c  test_mpo_graph.py  test_su2_hamiltonian.c  test_su2_hamiltonian.py  test_ttno.c  test_ttno.py  test_ttno_graph.c  test_ttno_graph.py
test/state/: mps.py  test_mps.c  test_mps.py  test_su2_mps.c  test_ttns.c  test_ttns.py
test/tensor/: block_sparse_util.py  test_block_sparse_tensor.c  test_block_sparse_tensor.py  test_clebsch_gordan.c  test_dense_tensor.c  test_dense_tensor.py  test_sparse_coordinate_tensor.c  test_su2_graph.c  test_su2_tensor.c  test_su2_tensor.py  test_su2_tree.c  test_su2_tree.py
test/util/: bipartite_graph.py  (+19 more)
(+84 files in other folders)
