[project]
name = "chemtensor"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Christian B. Mendl", email = "christian.b.mendl@gmail.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "numpy",
]
dynamic = ["version"]

[project.optional-dependencies]
doc = [
    "ipykernel",
    "nbsphinx",
    "nbsphinx-link",
    "breathe",
    "furo",
]
examples = [
    "pyscf",
]

[project.urls]
homepage = "https://github.com/qc-tum/chemtensor"
repository = "https://github.com/qc-tum/chemtensor"
issues = "https://github.com/qc-tum/chemtensor/issues"

[build-system]
requires = [
    "scikit-build-core",
    "setuptools-scm",
    "numpy",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["python/chemtensor/_version.py"]
build.targets = ["chemtensor_pymodule"]
build.verbose = true
wheel.install-dir = "chemtensor"

[tool.setuptools_scm]
write_to = "python/chemtensor/_version.py"
